feat: update web socket controller